# VERZAKOV-CS-Labs-2025

./: .gitignore  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  Encryptor.cpp  Encryptor.h  Executor.cpp  Executor.hpp  InFile.txt  IntegralSolver.cpp  IntegralSolver.hpp  InverseMatrixCalculator.cpp  InverseMatrixCalculator.hpp  README.md  Vector.cpp  Vector.h  candidats.hpp  main.cpp  mprinter.cpp  mprinter.hpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Functions/: CMakeLists.txt  functions.cpp  functions.hpp
MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.hpp
Organizations/: CMakeLists.txt  insurance.cpp  insurance.hpp  organization.cpp  organization.hpp  plant.cpp  plant.hpp  shipbuilding.cpp  shipbuilding.hpp
Polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.hpp
Term/: CMakeLists.txt  term.cpp  term.hpp
Vector/: CMakeLists.txt  myvector.cpp  myvector.hpp
candidats/: CMakeLists.txt  candidats.cpp  candidats.hpp
containers/: myset.h  myvector.h
division/: CMakeLists.txt  Makefile  cmake_install.cmake  division.cpp  division.h
fractions/: CMakeLists.txt  fractions.cpp  fractions.hpp
mymath/: Makefile  cmake_install.cmake
planets/: CMakeLists.txt  planets.cpp  planets.hpp
tests/: CMakeCache.txt  Makefile  cmake_install.cmake  lab1
tests/division/: Makefile  cmake_install.cmake
tests/mymath/: Makefile  cmake_install.cmake
